test/fail/annotations-let.grace
let Name is ann = type {}
